# ChangeLog for media-sound/lame
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-sound/lame/ChangeLog,v 1.1 2003/01/16 18:49:53 holler Exp $

*lame-3.93.1-r1 (16 Jan 2003)

  31 Dec 2002: Alexander Holler <holler@gentoo.de> lame-3.93.1-r1.ebuild :
  Added fix for march=k6

  16 Dec 2002; Martin Schlemmer <azarah@gentoo.org> lame-3.93.1.ebuild :
  Run autoreconf to fix the ./configure script not detecting gtk-config
  properly.

*lame-3.93.1 (11 Dec 2002)

  31 Dec 2002: Joshua Brindle <method@gentoo.org> lame-3.93.1.ebuild :
  Change ~sparc to sparc

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org> lame-3.93.1.ebuild :
  Add alpha to KEYWORDS

  12 Dec 2002; phoen][x <phoenix@gentoo.org> lame-3.93.1.ebuild :
  Tagging this ebuild stable ("x86").

  11 Dec 2002; phoen][x <phoenix@gentoo.org> lame-3.93.1.ebuild,
  files/digest-lame-3.93.1 :
  Bumped to new version. Hopefully, the need for these quality problem 
  patches is gone now. 

* Autoupdate keywords (12-6-02)
  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*lame-3.93.0-r1 (23 Nov 2002)

  01 Dec 2002; phoen][x <phoenix@gentoo.org> lame-3.93.0-r1.ebuild, 
  files/lame-3.93.0-npsytunefix.diff, files/lame-3.93.0-q0fix.diff :
  Incorporated the fixes from bug #11194. Thanks to Sebastian Droege 
  <sebastian.droege@gmx.de> for the contribution.

  12 Dec 2002; phoen][x <phoenix@gentoo.org> lame-3.93.0-r1.ebuild,
  files/lame-3.93.0-npsytunefix.diff, files/lame-3.93.0-q0fix.diff :
  Removing this ebuild - lame-3.93.1 comes with these patches.
 
*lame-3.93.0 (23 Nov 2002)
  
  23 Nov 2002; Spider <spider@gentoo.org> lame-3.93.0.ebuild :
  new versioning scheme, unfortunately not followed inside the tarball so I 
  had to hack some there. The vorbis support was cut out from this release 
  (at least according to the changelog)  so I removed the IUSE and USE flags 