@@ -1,11 +1,18 @@
 # ChangeLog for media-sound/lame
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-sound/lame/ChangeLog,v 1.1 2003/01/16 18:49:53 holler Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-sound/lame/ChangeLog,v 1.2 2003/01/31 22:37:52 holler Exp $
 
-*lame-3.93.1-r1 (16 Jan 2003)
+*lame-3.93.1-r2 (31 Jan 2003)
 
-  31 Dec 2002: Alexander Holler <holler@gentoo.de> lame-3.93.1-r1.ebuild :
+  31 Dec 2002: Alexander Holler <holler@gentoo.de> lame-3.93.1-r2.ebuild :
   Added fix for march=k6
+   
+*lame-3.93.1-r1 (28 Jan 2003)
+
+  28 Jan 2003; Nick Hadaway <raker@gentoo.org> lame-3.93.1-r1.ebuild,
+  files/digest-lame-3.93.1-r1 :
+  Got rid of the autotools and libtool workarounds and just sed'd the
+  configure script gtk detection.
 
   16 Dec 2002; Martin Schlemmer <azarah@gentoo.org> lame-3.93.1.ebuild :
   Run autoreconf to fix the ./configure script not detecting gtk-config
